# m.i.n.d

./: .agent.md  .bandit  .dvcignore  .env.example  .gitignore  .instructions.md  .pre-commit-config.yaml  AGENTS.md  ANCHORED SUMMARY.md  CLINICAL_MANUAL.md  Caddyfile  Conceitual_1.brM3  DESENVOLVIMENTO.md  Dockerfile  LICENSE  PROJECT_SETUP_COMPLETE.md  QUICKSTART.md  README.md  README_PORTFOLIO.md  SECURITY.md  STRUCTURE.md  __tmp_check_symptoms.py  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements-prod.txt  requirements-spark.txt  requirements.txt
.certs/: mind-dev.crt  mind-dev.pfx
.dvc/: config
.github/workflows/: ci.yml
airflow/dags/: alert_generation_dag.py  clinical_inference_dag.py  data_quality_dag.py  metrics_aggregation_dag.py
alembic/: env.py
alembic/versions/: _add_indexes.py  alembic.ini
app/: main.py
app/analytics/: service.py
app/api/: admin.py  alerts.py  assessments.py  audit.py  auth.py  consultations.py  disorders.py  episodes.py  exports.py  health.py  inferences.py  medications.py  metrics.py  patients.py  professionals.py  reference.py  reports.py  scales.py  timeline.py
app/core/: config.py  database.py  logging_config.py
app/etl/: dw_loader.py
app/middleware/: audit_middleware.py  security_middleware.py
app/ml/: assessment_scales.py  bayesian_inference_service.py  bayesian_network.py  criteria_evaluator.py  dsm_icd_mapper.py  inference_engine.py  network_definition.py
app/models/: base.py  dw.py
app/repositories/: __init__.py  auth_repository.py  base.py  consultation_repository.py  disorder_repository.py  episode_repository.py  inference_repository.py  medication_repository.py  patient_repository.py  professional_repository.py  scale_repository.py  service.py
app/schemas/: admin.py  alert.py  assessment.py  audit.py  auth.py  common.py  consultation.py  disorder.py  episode.py  inference.py  medical_report.py  medication.py  patient_identity.py  patient_profile.py  professional.py  scale.py  timeline.py
app/security/: auth.py  encryption.py  hashing.py  jwt.py  lgpd.py  permissions.py  rbac.py
app/services/: access_log_service.py  admin_service.py  alerts_service.py  assessment_service.py  audit_service.py  chatbot_service.py  consent_service.py  consultation_service.py  crud_service.py  disorder_service.py  episode_service.py  export_service.py  inference_log_service.py  inference_service.py  integrity_service.py  medical_report_service.py  medication_service.py  metrics_service.py  monitor_service.py  patient_service.py  professional_service.py  reference_service.py  scale_service.py  timeline_service.py  treatment_service.py
app/static/: index-BXVlh_Sa.js  index.html
dags/: alert_generation_dag.py  clinical_inference_dag.py  config.py  data_quality_dag.py  metrics_aggregation_dag.py
data/datasets/: .gitignore  clinical_dataset.csv  features_diagnosis.csv.dvc  features_relapse.csv.dvc  features_suicide_risk.csv.dvc  features_therapeutic_response.csv.dvc
data/reports/: clinical_integrity_report.json
db/: add_patient.py  auditory_logs.sql  check_data.py  clinical_symptom.sql  core_camada_escalas_clinicas.sql  core_clinical.sql  core_diagnostic.sql  core_ml.sql  core_security.sql  core_tabelas_categoricas.sql  diagnostic_inference.sql  populate_clinical.py  schemas.sql  seed.py
docker/airflow/: Dockerfile
docker/api/: Dockerfile  entrypoint.sh
docker/spark/: Dockerfile
docs/: prior_calibration.md
docs/model_cards/: diagnosis.md  relapse.md  suicide_risk.md  therapeutic_response.md
ideia_projeto/: M.I.N.D. (Mental Intelligence & Net.txt  mental_health_diagnostic_support_system.md  mental_health_diagnostic_support_system_v2.md  projeto_psicologia_e_dados.md  projeto_psicologia_e_dados_v2.md
migrations/: 001_initial_schema.sql  env.py
migrations/versions/: 005f85846e88_admin_permissions_routes.py  031c8a8ec7b8_add_user_uuid_to_healthcare_.py  05ecbb7b2bc1_initial_schema.py  1c223a553bb0_add_clinical_alerts_table.py  2c8a1e3fae51_add_medical_reports.py  41991f22ee27_add_audit_logs_columns.py  4ad39c05ec58_merge_advanced_dw_views_with_main_branch.py  7a1b3c5d8e9f_add_medications_prescriptions.py  9e4c2f8a1b3d_add_trans_status.py  a29a8fdd7159_add_profession_and_start_date_to_.py  a2b3c4d5e6f7_add_advanced_dw_analytics_views.py  b3c4d5e6f7a8_add_clinical_notes_table.py  c1d2e3f4a5b6_add_clinical_check_constraints.py  c608eee4970f_remove_icd11_code_unique_constraint.py  d4e5f6a7b8c9_add_classification_authorities.py  d7e8f9a0b1c2_add_dw_analytics_views.py  e2f3a4b5c6d7_add_mia_chat_tables.py  e5f6a7b8c9d0_add_professional_patient_assignments.py  f0e1d2c3b4a5_add_disorder_medications_and_treatment_outcomes.py  f6a7b8c9d0e1_add_icd11_exclusions_and_differentials.py  f7b8c9d0e1f2_add_dsm_chapter_to_disorders.py
mind-ui/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
mind-ui/src/: App.tsx  index.css
modelagem_dados/: tabelas_centrais.sql  tabelas_centrais2.sql
modelo_bd/: Conceitual_1.xml  Lógico_1.brM3  Lógico_1.xml  mind_modelo_conceitual.brM3  mind_modelo_conceitual.xml  mind_modelo_logico.brM3  mind_modelo_logico.xml
notebooks/: generate_notebook.py  model_evaluation.ipynb  model_evaluation_script.py
scripts/: build_clinical_dataset.py  check_current_state.py  check_integrity.py  dsm5tr_data.py  enrich_icd11_descriptions.py  export_training_data.py  reference_symptom_data.py  seed_clinical_data.py  seed_diagnostic_data.py  seed_full_catalog.py  seed_full_catalog.py.bak  seed_icd11.py  seed_medication_efficacy.py  seed_mia_knowledge.py  seed_ml_symptoms.py  seed_scales_groups.py  test_predict.py  test_stats.py  test_treatment_api.py  train_all.py
spark/: config.py  submit.py
spark/jobs/: batch_inference.py  data_import.py  population_metrics.py
tests/: conftest.py
tests/analytics/: test_metrics.py
tests/integration/: test_admin.py  test_api.py  test_audit_api.py  test_consultations.py  test_repositories.py
tests/security/: test_access_log_service.py  test_auth.py  (+4 more)
(+162 files in other folders)
