[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-cdss"
version = "0.1.0"
description = "M.I.N.D - Mental Intelligence & Network Data - Clinical Decision Support System for Mental Health Diagnosis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "M.I.N.D Team", email = "team@mind.local"}
]
keywords = ["mental-health", "diagnostic", "clinical-decision-support", "DSM-5", "ICD-11", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "Typing :: Typed",
]

dependencies = [
    "xgboost>=2.0.3",
    "mlflow>=2.10.0",
    "dvc[postgres]>=3.48.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy-utils>=0.39.0",
    "numpy>=1.24.3",
    "scipy>=1.11.4",
    "pandas>=2.1.3",
    "scikit-learn>=1.3.2",
    "pymc>=5.10.0",
    "arviz>=0.17.0",
    "apache-airflow>=2.8.0",
    "pyspark>=3.5.0",
    "pyjwt>=2.8.1",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.1",
    "cryptography>=44.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "fpdf2>=2.8.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "pylint>=3.0.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/spdr-lily/m.i.n.d"
Documentation = "https://github.com/spdr-lily/m.i.n.d"
Repository = "https://github.com/spdr-lily/m.i.n.d.git"
Issues = "https://github.com/spdr-lily/m.i.n.d/issues"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "clinical: Clinical logic tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.MASTER]
ignore-paths = ["tests", "migrations"]
